# lenapy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  __init__.py  conda-lock.yml  environment.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  xGeo.py
.github/workflows/: ci.yml
data/: .gitignore  COSTG_n12_2002_2022.nc  GOCO06s_l20.gfc  GSM-2_2002213-2002243_GRAC_COSTG_BF01_0100.gfc  GSM-2_2023001-2023031_GRFO_CNESG_TSVD_0500.txt  MSL.nc  MSL_wo_seasonal_signal.nc  TN-14_C30_C20_GSFC_SLR.txt  argo.nc  errors.yaml  global_water_budget.nc  ohc.nc
doc/: .gitignore  CHANGELOG.md  Makefile  api.rst  changelog.rst  conf.py  constants.html  constants.md  contributing.rst  environment.yml  generate_doc.py  gettingStarted.rst  index.html  index.md  index.rst  interface.html  interface.md  lenapy.geo_reader.rst  lenapy.html  lenapy.lenapy_geo.GeoArray.rst  lenapy.lenapy_geo.GeoSet.rst  lenapy.lenapy_geo.rst  lenapy.lenapy_ocean.rst  lenapy.lenapy_time.TimeArray.rst  lenapy.lenapy_time.TimeSet.rst  lenapy.lenapy_time.rst  lenapy.ocean.rst  lenapy.readers.geo_reader.rst  lenapy.readers.ocean.rst  lenapy.readers.rst  make.bat  plotting.html  plotting.md  produits.html  produits.md  release_procedure.rst  requirements.txt  sandbox.html  sandbox.md  search.js  (+9 more)
doc/api/: index.rst
lenapy/: __init__.py  constants.py  covariance.py  filters.py  interface.py  lenapy_geo.py  lenapy_harmo.py  lenapy_ocean.py  lenapy_time.py  plotting.py  produits.py  produits_gravi.py  sandbox.py  utils.py  utils_gravi.py  utils_xGeo.py  utils_xTime.py  xGeo.py  xHarmo.py  xMask.py  xOcean.py  xTime.py
tests/: conftest.py  test_lngeo.py  test_lnharmo.py  test_lnocean.py  test_lntime.py  utilities.py
xGeo/: interface.py  plotting.py  utils.py  xGeo.py  xMask.py  xOcean.py
(+90 files in other folders)
